plugin -> server